# AstroMind

./: .gitignore  main.py  pyproject.toml  requirements.txt
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css
comms_module/: echoes_api.py
llm_engine/: llm_api.py
sleep_module/: sleep_api.py  sleep_notebook.ipynb
sleep_module/saved_sleep_model/: feature_columns.pkl  target_encoder.pkl  xgboost_sleep_model.pkl
voice_module/: voice_api.py  voice_notebook.ipynb
