[project]
name = "astromind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.4",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "transformers>=5.9.0",
    "uvicorn>=0.48.0",
    "xgboost>=3.2.0",
]
